fix(component): fix tab extra area z-index
fix #85

--- a/packages/component/src/components/tab/index.scss
+++ b/packages/component/src/components/tab/index.scss
@@ -37,9 +37,11 @@ $tabs-cls-name: '#{$css-prefix}tabs';
 }
 
 .#{$tabs-cls-name}-wrapped {
-  .#{$tabs-cls-name}-nav-container {
-    z-index: 1 !important;
-  }
+  // fix: https://github.com/aliyun/alibabacloud-console-components/issues/85
+  // 不知道为什么之前要加这个样式
+  // .#{$tabs-cls-name}-nav-container {
+  //   z-index: 1 !important;
+  // }
 
   &.#{$tabs-cls-name}-top > .#{$tabs-cls-name}-content {
     top: -1px;
